paloalto/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "externalAccessIps": {
      "type": "string",
      "metadata": {
        "description": "Comma seperated list of external IP's that are allowed to access the management ports."
      }
    },
    "availabilitySetName": {
      "type": "string",
      "defaultValue": "VMSeriesFwAvSet",
      "metadata": {
        "description": "Azure Availability Set for VM-Series firewalls"
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "Vnet01-P-WE",
      "metadata": {
        "description": "Hyper-V Host and Guest VMs Virtual Network"
      }
    },
    "outsideSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Outside Subnet Name"
      },
      "defaultValue": "AZW-OUTSIDE"
    },
    "DMZSubnetName": {
      "type": "string",
      "metadata": {
        "description": "DMZ Subnet Name"
      },
      "defaultValue": "AZW-DMZ"
    },
    "lbfSubnetName": {
      "type": "string",
      "metadata": {
        "description": "AZW-LBF Subnet Name"
      },
      "defaultValue": "AZW-LBF"
    },
    "lbfDtaSubnetName": {
      "type": "string",
      "metadata": {
        "description": "AZW-LBF-DTA Subnet Name"
      },
      "defaultValue": "AZW-LBF-DTA"
    },
    "HostVirtualMachine1Name": {
      "type": "string",
      "defaultValue": "PFWCAZU01",
      "maxLength": 15,
      "metadata": {
        "description": "Name of Hyper-V Host Virtual Machine, Maximum of 15 characters, use letters and numbers only."
      }
    },
    "HostVirtualMachine2Name": {
      "type": "string",
      "defaultValue": "PFWCAZU02",
      "maxLength": 15,
      "metadata": {
        "description": "Name of Hyper-V Host Virtual Machine, Maximum of 15 characters, use letters and numbers only."
      }
    },
    "HostVirtualMachineFrontEndNSGName": {
      "type": "string",
      "defaultValue": "plb-nsg",
      "maxLength": 15,
      "metadata": {
        "description": "Name of Hyper-V Host Virtual Machine, Maximum of 15 characters, use letters and numbers only."
      }
    },
    "HostVirtualMachineMgmtNSGName": {
      "type": "string",
      "defaultValue": "pa-nsg",
      "maxLength": 15,
      "metadata": {
        "description": "Name of Hyper-V Host Virtual Machine, Maximum of 15 characters, use letters and numbers only."
      }
    },
    "HostVirtualMachineSize": {
      "type": "string",
      "defaultValue": "Standard_DS5_v2",
      "allowedValues": [
        "Standard_D3",
        "Standard_D4",
        "Standard_D3_v2",
        "Standard_D4_v2",
        "Standard_D5_v2",
        "Standard_D3_v3",
        "Standard_D4_v3",
        "Standard_D16_v3",
        "Standard_DS3_v2",
        "Standard_DS4_v2",
        "Standard_DS5_v2",
        "Standard_DS3_v3",
        "Standard_DS4_v3",
        "Standard_DS16_v3",
        "Standard_A4"
      ]
    },
    "HostAdminUsername": {
      "type": "string",
      "metadata": {
        "description": "Admin Username for the Host Virtual Machine"
      }
    },
    "HostAdminPassword": {
      "type": "secureString",
      "metadata": {
        "description": "Admin User Password for the Host Virtual Machine"
      }
    },
    "frontEndLoadBalancerName": {
      "type": "string",
      "metadata": {
        "description": "Frontend Application Gateway Name"
      },
      "defaultValue": "publicLoadBalancer"
    },
    "backEndLoadBalancerName": {
      "type": "string",
      "metadata": {
        "description": "Backend Application Gateway Name"
      },
      "defaultValue": "internalLoadBalancer"
    },
    "mgmtSubnetName": {
      "type": "string",
      "metadata": {
        "description": "AZW-MGMT Subnet Name"
      },
      "defaultValue": "AZW-MGT"
    },
    "pa1IpName": {
      "type": "string",
      "metadata": {
        "description": "Frontend Application Gateway Public IP Address Name"
      },
      "defaultValue": "paPublicIp1"
    },
    "pa2IpName": {
      "type": "string",
      "metadata": {
        "description": "Frontend Application Gateway Public IP Address Name"
      },
      "defaultValue": "paPublicIp2"
    },
    "Host1NetworkInterface0Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the management interface of the first Palo Alto."
      },
      "defaultValue": "10.200.1.128"
    },
    "Host1NetworkInterface1Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the outside interface of the first Palo Alto."
      },
      "defaultValue": "10.200.16.4"
    },
    "Host1NetworkInterface2Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the dmz interface of the first Palo Alto."
      },
      "defaultValue": "10.200.17.4"
    },
    "Host1NetworkInterface3Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the lbf interface of the first Palo Alto."
      },
      "defaultValue": "10.200.18.4"
    },
    "Host1NetworkInterface4Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the lbf dta interface of the first Palo Alto."
      },
      "defaultValue": "10.200.20.4"
    },
    "Host2NetworkInterface0Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the management interface of the first Palo Alto."
      },
      "defaultValue": "10.200.1.129"
    },
    "Host2NetworkInterface1Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the outside interface of the first Palo Alto."
      },
      "defaultValue": "10.200.16.5"
    },
    "Host2NetworkInterface2Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the dmz interface of the first Palo Alto."
      },
      "defaultValue": "10.200.17.5"
    },
    "Host2NetworkInterface3Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the lbf interface of the first Palo Alto."
      },
      "defaultValue": "10.200.18.5"
    },
    "Host2NetworkInterface4Ip": {
      "type": "string",
      "metadata": {
        "description": "The ip address of the lbf dta interface of the first Palo Alto."
      },
      "defaultValue": "10.200.20.5"
    }
  },
  "variables": {
    "Host1NetworkInterface0Name": "[concat(parameters('HostVirtualMachine1Name'), '-eth0')]",
    "Host1NetworkInterface1Name": "[concat(parameters('HostVirtualMachine1Name'), '-eth1')]",
    "Host1NetworkInterface2Name": "[concat(parameters('HostVirtualMachine1Name'), '-eth2')]",
    "Host1NetworkInterface3Name": "[concat(parameters('HostVirtualMachine1Name'), '-eth3')]",
    "Host1NetworkInterface4Name": "[concat(parameters('HostVirtualMachine1Name'), '-eth4')]",
    "Host2NetworkInterface0Name": "[concat(parameters('HostVirtualMachine2Name'), '-eth0')]",
    "Host2NetworkInterface1Name": "[concat(parameters('HostVirtualMachine2Name'), '-eth1')]",
    "Host2NetworkInterface2Name": "[concat(parameters('HostVirtualMachine2Name'), '-eth2')]",
    "Host2NetworkInterface3Name": "[concat(parameters('HostVirtualMachine2Name'), '-eth3')]",
    "Host2NetworkInterface4Name": "[concat(parameters('HostVirtualMachine2Name'), '-eth4')]"
  },
  "resources": [
    {
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[parameters('availabilitySetName')]",
      "apiVersion": "2017-12-01",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Aligned"
      },
      "properties": {
        "platformFaultDomainCount": 2,
        "platformUpdateDomainCount": 5
      }
    },
    {
      "apiVersion": "2019-04-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[parameters('pa1IpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "apiVersion": "2019-04-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[parameters('pa2IpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('HostVirtualMachineMgmtNSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "HTTPS",
            "properties": {
              "description": "Allows access to HTTPS interface.",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('externalAccessIps')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH",
            "properties": {
              "description": "Allows access to SSH interface.",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[parameters('externalAccessIps')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('HostVirtualMachineFrontEndNSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowInternetInBound",
            "properties": {
              "description": "Allow's all traffic from the internet to the Palo Alto's.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host1NetworkInterface0Name')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('pa1IpName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineMgmtNSGName'))]"
      ],
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineMgmtNSGName'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host1NetworkInterface0Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('mgmtSubnetName'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('pa1IpName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host1NetworkInterface1Name')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineFrontEndNSGName'))]"
      ],
      "properties": {
        "enableIPForwarding": true,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineFrontEndNSGName'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host1NetworkInterface1Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('outsideSubnetName'))]"
              },
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('frontEndLoadBalancerName')), '/backendAddressPools/', 'LoadBalancerBackEndPool')]"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host1NetworkInterface2Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host1NetworkInterface2Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('DMZSubnetName'))]"
              },
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('backEndLoadBalancerName')), '/backendAddressPools/', 'paBackendPool')]"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host1NetworkInterface3Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host1NetworkInterface3Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('lbfSubnetName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host1NetworkInterface4Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host1NetworkInterface4Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('lbfDtaSubnetName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host2NetworkInterface0Name')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('pa2IpName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineMgmtNSGName'))]"
      ],
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineMgmtNSGName'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host2NetworkInterface0Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('mgmtSubnetName'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('pa2IpName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host2NetworkInterface1Name')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineFrontEndNSGName'))]"
      ],
      "properties": {
        "enableIPForwarding": true,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('HostVirtualMachineFrontEndNSGName'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host2NetworkInterface1Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('outsideSubnetName'))]"
              },
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('frontEndLoadBalancerName')), '/backendAddressPools/', 'LoadBalancerBackEndPool')]"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host2NetworkInterface2Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host2NetworkInterface2Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('DMZSubnetName'))]"
              },
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('backEndLoadBalancerName')), '/backendAddressPools/', 'paBackendPool')]"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host2NetworkInterface3Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host2NetworkInterface3Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('lbfSubnetName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "name": "[variables('Host2NetworkInterface4Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "primary": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('Host2NetworkInterface4Ip')]",
              "subnet": {
                "id": "[resourceId('NetworkServices-P-WE', 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('lbfDtaSubnetName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-03-01",
      "location": "[parameters('location')]",
      "name": "[parameters('HostVirtualMachine1Name')]",
      "plan": {
        "name": "byol",
        "product": "vmseries1",
        "publisher": "paloaltonetworks"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySetName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface0Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface1Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface2Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface3Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface4Name'))]"
      ],
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySetName'))]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('HostVirtualMachineSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "paloaltonetworks",
            "offer": "vmseries1",
            "Sku": "byol",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "fromImage"
          }
        },
        "osProfile": {
          "computerName": "[parameters('HostVirtualMachine1Name')]",
          "adminUsername": "[parameters('HostAdminUsername')]",
          "adminPassword": "[parameters('HostAdminPassword')]"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface0Name'))]",
              "properties": {
                "primary": true
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface1Name'))]",
              "properties": {
                "primary": false
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface2Name'))]",
              "properties": {
                "primary": false
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface3Name'))]",
              "properties": {
                "primary": false
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host1NetworkInterface4Name'))]",
              "properties": {
                "primary": false
              }
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-03-01",
      "location": "[parameters('location')]",
      "name": "[parameters('HostVirtualMachine2Name')]",
      "plan": {
        "name": "byol",
        "product": "vmseries1",
        "publisher": "paloaltonetworks"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySetName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface0Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface1Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface2Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface3Name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface4Name'))]",
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('HostVirtualMachine1Name'))]"
      ],
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySetName'))]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('HostVirtualMachineSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "paloaltonetworks",
            "offer": "vmseries1",
            "Sku": "byol",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "fromImage"
          }
        },
        "osProfile": {
          "computerName": "[parameters('HostVirtualMachine2Name')]",
          "adminUsername": "[parameters('HostAdminUsername')]",
          "adminPassword": "[parameters('HostAdminPassword')]"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface0Name'))]",
              "properties": {
                "primary": true
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface1Name'))]",
              "properties": {
                "primary": false
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface2Name'))]",
              "properties": {
                "primary": false
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface3Name'))]",
              "properties": {
                "primary": false
              }
            },
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('Host2NetworkInterface4Name'))]",
              "properties": {
                "primary": false
              }
            }
          ]
        }
      }
    }
  ],
  "outputs": {
  }
}
